--- a/src/components/quizListContainer/QuizListContainer.scss
+++ b/src/components/quizListContainer/QuizListContainer.scss
@@ -34,6 +34,7 @@
 // QUIZ LIST CONTAINER
 .quiz-list-container{
     margin-top: 2rem;
+    width: 90%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
